--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                       <h5>Dr. Lakshmi Engineer</h5>
                     <hr class="hr-line-doctor">
                     <ul>
-                      <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong> MD (HOM) B.H.M.S(Bom)</li>
-                      <li><img src="images/total-exp.webp" alt="Total Experience" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Total Experience :&nbsp;</strong> 30 Years</li>
+                      <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong><br class="d-block d-md-none"> MD (HOM) B.H.M.S(Bom)</li>
+                      <li><img src="images/total-exp.webp" alt="Total Experience" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Total Experience :&nbsp;</strong><br class="d-block d-md-none"> 30 Years</li>
                     </ul>
                     <p>Dr. Lakshmi Engineer is a senior registered homeopathic consultant with over 30 years of experience. She holds masters degree (MD), (HMM), and bachelor`s degree BHMS from nationally and internationally renowned institutions. She was an associate professor for over a decade in the subject of Materia Medica. Dr. Lakshmi is proficient in chronic health areas such as acne, alopecia, allergic disorders, psoriasis, vitiligo, and children & women`s health. She has a roster of over a thousand patients treated successfully and happy with the professional care received. She is associated with Dr.Batra’s superspeciity clinic in capacity of chief medical consultant since 2005. Her unique blend of clinical and academic experience let`s her see the big picture and achieve optimal results for patients.</p>
                    </div>
@@ -283,8 +283,8 @@
                           <h5>Dr. Deepti Subhash</h5>
                         <hr class="hr-line-doctor">
                         <ul>
-                          <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong> Hair, Skin, Stress Management</li>
-                          <li><img src="images/total-exp.webp" alt="Total Experience" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Total Experience :&nbsp;</strong> 15 Years</li>
+                          <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong><br class="d-block d-md-none"> Hair, Skin, Stress Management</li>
+                          <li><img src="images/total-exp.webp" alt="Total Experience" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Total Experience :&nbsp;</strong><br class="d-block d-md-none"> 15 Years</li>
                         </ul>
                         <p>Dr. Deepti has an experience of 15yrs in homeopathic medicine treated so many patient’s of hair, skin, stress with homeopathy. Also done her certification course in child heath, skin diseases. Also counselling patient’s</p>
                     </div>
