--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <div class="col-md-12">
                     <div class="checkbox check_box_lable">
                       <label>
-                        <input type="checkbox" checked> I understand and accept the <a href=""> terms and conditions</a> </label>
+                        <input type="checkbox" checked> I understand and accept the <a href="">&nbsp; terms and conditions</a> </label>
                     </div>
                     <div class="checkbox check_box_lable">
                       <label>
