--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="ourdoctor_slider owl-carousel">
               <div class="item">
                 <div class="row">
-                  <div class="col-md-4"> <img src="images/doc-01.webp" alt="Dr. Lakshmi Engineer" class="img-fluid" width="384" height="431" loading="lazy" /> </div>
+                  <div class="col-md-4 pl-0 pr-0"> <img src="images/doc-01.webp" alt="Dr. Lakshmi Engineer" class="img-fluid" width="384" height="431" loading="lazy" /> </div>
                   <div class="col-md-8 doc_infO_div">
                    <div class="info_div_doctors_sub">
                       <h5>Dr. Lakshmi Engineer</h5>
@@ -277,7 +277,7 @@
               </div>
               <div class="item">
                 <div class="row">
-                  <div class="col-md-4"> <img src="images/doc-02.webp" alt="Dr. Deepti Subhash" class="img-fluid" width="384" height="431" loading="lazy" /> </div>
+                  <div class="col-md-4 pl-0 pr-0"> <img src="images/doc-02.webp" alt="Dr. Deepti Subhash" class="img-fluid" width="384" height="431" loading="lazy" /> </div>
                   <div class="col-md-8 doc_infO_div">
                     <div class="info_div_doctors_sub">
                           <h5>Dr. Deepti Subhash</h5>
@@ -306,33 +306,33 @@
       <div class="row">
         <div class="col-md-10 mx-auto text-center">
           <div class="row">
-            <div class="col-md-3 col-6"><img src="images/Happy-Skin-Patients.webp" class="img-fluid" alt="Happy Skin Patient" width="90" height="90">
+            <div class="col-md-3 col-6"><img src="images/Happy-Skin-Patients.webp" class="img-fluid" alt="Happy Skin Patient" width="90" height="90" loading="lazy" />
               <h3 class="intr_top2">1,40,000</h3>
               <p class="intr_para">Happy Skin Patient</p>
               <hr class="why-hr-line"> </div>
-            <div class="col-md-3 col-6"><img src="images/Success-Rate.webp" class="img-fluid" alt="Success Rate" width="90" height="90">
+            <div class="col-md-3 col-6"><img src="images/Success-Rate.webp" class="img-fluid" alt="Success Rate" width="90" height="90" loading="lazy" />
               <h3 class="intr_top2">94.3%</h3>
               <p class="intr_para">Success Rate</p>
               <hr class="why-hr-line"> </div>
-            <div class="col-md-3 col-6"><img src="images/Experienced.webp" class="img-fluid" alt="Homeopathic Dermatologists" width="90" height="90">
+            <div class="col-md-3 col-6"><img src="images/Experienced.webp" class="img-fluid" alt="Homeopathic Dermatologists" width="90" height="90" loading="lazy" />
               <h3 class="intr_top2">Experienced</h3>
               <p class="intr_para">Homeopathic Dermatologists</p>
               <hr class="why-hr-line"> </div>
-            <div class="col-md-3 col-6"><img src="images/Expert.webp" class="img-fluid" alt="Medical Advisory Board" width="90" height="90">
+            <div class="col-md-3 col-6"><img src="images/Expert.webp" class="img-fluid" alt="Medical Advisory Board" width="90" height="90" loading="lazy" />
               <h3 class="intr_top2">Expert</h3>
               <p class="intr_para">Medical Advisory Board</p>
               <hr class="why-hr-line"> </div>
           </div>
           <div class="row">
-            <div class="col-md-4 col-6 offset-md-1"><img src="images/Advanced-technology.webp" class="img-fluid" alt="Advanced technology" width="90" height="90">
+            <div class="col-md-4 col-6 offset-md-1"><img src="images/Advanced-technology.webp" class="img-fluid" alt="Advanced technology" width="90" height="90" loading="lazy" />
               <h3 class="intr_top2">Advanced technology</h3>
               <p class="intr_para">For Diagnosis and Treatment</p>
               <hr class="why-hr-line"> </div>
-            <div class="col-md-3 col-6"><img src="images/Network.webp" class="img-fluid" alt="Network" width="90" height="90">
+            <div class="col-md-3 col-6"><img src="images/Network.webp" class="img-fluid" alt="Network" width="90" height="90" loading="lazy" />
               <h3 class="intr_top2">Network of</h3>
               <p class="intr_para">300+ Doctors</p>
               <hr class="why-hr-line"> </div>
-            <div class="col-md-3 col-6 offset-md-0 offset-3"><img src="images/Clinics.webp" class="img-fluid" alt="Clinics Globally" width="90" height="90">
+            <div class="col-md-3 col-6 offset-md-0 offset-3"><img src="images/Clinics.webp" class="img-fluid" alt="Clinics Globally" width="90" height="90" loading="lazy" />
               <h3 class="intr_top2">200+</h3>
               <p class="intr_para">Clinics Globally</p>
               <hr class="why-hr-line"> </div>
@@ -827,40 +827,10 @@
   <script src="js/owl.carousel.min.js" data-cfasync="false"></script>
   <script src="js/custom.js" data-cfasync="false"></script>
   <script>
-  $(".tabb_content").hide(), $(".tabb_content:first").show(), $("ul.nptabbs li").click(function() {
-    $(".tabb_content").hide();
-    var a = $(this).attr("rel");
-    $("#" + a).fadeIn(), $("ul.nptabbs li").removeClass("active"), $(this).addClass("active"), $(".tabb_drawer_heading").removeClass("d_active"), $(".tabb_drawer_heading[rel^='" + a + "']").addClass("d_active")
-  }), $(".tabb_drawer_heading").click(function() {
-    $(".tabb_content").hide();
-    var a = $(this).attr("rel");
-    $("#" + a).fadeIn(), $(".tabb_drawer_heading").removeClass("d_active"), $(this).addClass("d_active"), $("ul.nptabbs li").removeClass("active"), $("ul.nptabbs li[rel^='" + a + "']").addClass("active")
-  }), $("ul.nptabbs li").last().addClass("tabb_last");
+
   </script>
   <script>
-  function tabControl() {
-    var e = $(".tabbed-content").find(".tabs");
-    e.is(":visible") ? e.find("a").on("click", function(e) {
-      e.preventDefault();
-      var t = $(this).attr("href"),
-        a = $(this).parents(".tabs"),
-        i = a.find("a"),
-        s = a.parents(".tabbed-content").find(".item");
-      i.removeClass("active"), s.removeClass("active"), $(this).addClass("active"), $(t).addClass("active")
-    }) : $(".item").on("click", function() {
-      var e = $(this).parents(".tabbed-content"),
-        t = $(this).attr("id"),
-        a = e.find(".item");
-      e.find(".tabs a").removeClass("active"), a.removeClass("active"), $(this).addClass("active"), e.find('.tabs a[href$="#' + t + '"]').addClass("active")
-    })
-  }
-  tabControl();
-  var resizeTimer;
-  $(window).on("resize", function(e) {
-    clearTimeout(resizeTimer), resizeTimer = setTimeout(function() {
-      tabControl()
-    }, 250)
-  });
+
   </script>
 </body>
 
