--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-left">
-          <h2 class="main-all-heading">Real People, Real Result</h2></div>
+          <h2 class="main-all-heading">Real People, Real Results</h2></div>
         <div class="col-lg-12">
           <div class="section-padding">
             <div class="screenshot_slider owl-carousel">
