--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                       <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong><br class="d-block d-md-none"> MD (HOM) B.H.M.S(Bom)</li>
                       <li><img src="images/total-exp.webp" alt="Total Experience" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Total Experience :&nbsp;</strong><br class="d-block d-md-none"> 30 Years</li>
                     </ul>
-                    <p>Dr. Lakshmi Engineer is a senior registered homeopathic consultant with over 30 years of experience. She holds masters degree (MD), (HMM), and bachelor`s degree BHMS from nationally and internationally renowned institutions. She was an associate professor for over a decade in the subject of Materia Medica. Dr. Lakshmi is proficient in chronic health areas such as acne, alopecia, allergic disorders, psoriasis, vitiligo, and children & women`s health. She has a roster of over a thousand patients treated successfully and happy with the professional care received. She is associated with Dr.Batra’s superspeciity clinic in capacity of chief medical consultant since 2005. Her unique blend of clinical and academic experience let`s her see the big picture and achieve optimal results for patients.</p>
+                    <p>Dr Lakshmi Engineer is a senior registered homeopathic consultant with over 30 years of work experience, holding a master's degree in MD (HMM) and a bachelor's degree in BHMS from an internationally renowned institute. She was an associate professor for 10+ years and taught Materia Medica. Dr Lakshmi's areas of expertise include acne, alopecia, allergic disorders, psoriasis, vitiligo, and women's and children's health. Her patient roster includes more than a thousand patients who have been treated successfully and are satisfied with her professional care. Currently serving as a chief medical consultant at Dr Batra's<sup>®</sup> super speciality clinic, she has been with the clinic since 2005. Her unique clinical and academic experience enables her to take a holistic approach to patient care and achieve optimal results.</p>
                    </div>
                   </div>
                 </div>
@@ -286,7 +286,7 @@
                           <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong><br class="d-block d-md-none"> Hair, Skin, Stress Management</li>
                           <li><img src="images/total-exp.webp" alt="Total Experience" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Total Experience :&nbsp;</strong><br class="d-block d-md-none"> 15 Years</li>
                         </ul>
-                        <p>Dr Deepti has an experience of 15 years in homeopathic medicine. She has treated patients of hair, skin and stress with homeopathy. Dr Deepti has also completed a certificate course in child health and skin diseases. She has also counselled patients.</p>
+                        <p>Dr Deepti Subhash has 15 years of experience in homeopathic medicine and has completed her certification course in child health and skin diseases. She has treated many patients with hair, skin, and stress with homeopathy.</p>
                     </div>
                   </div>
                 </div>
