--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="col-md-4"> <img src="images/model-tab-img-01.webp" alt="Psoriasis Model" class="img-fluid mx-auto" width="344" height="382" loading="lazy" /> </div>
                     <div class="col-md-8 pl-md-0">
                       <h5>Psoriasis</h5>
-                      <p>Do you know Psoriasis affects 8 million people in the UK? Are you suffering from Red patches with silvery scales, dry skin, and itching? Then You Might Be One of Them?</p>
+                      <p>Do you know Psoriasis affects 8 million people in the UK? Are you suffering from Red patches with silvery scales, dry skin, and itching? Then You Might Be One of Them</p>
                       <h6>How Can We Help You?</h6>
                       <ul>
                         <li>We at Dr Batra's® Homeopathy provide holistic care, targeting root causes for long-lasting relief</li>
@@ -220,10 +220,10 @@
                     <div class="col-md-4"> <img src="images/model-tab-img-05.webp" alt="PCOS Model" class="img-fluid mx-auto" width="344" height="382" loading="lazy" /> </div>
                     <div class="col-md-8 pl-md-0">
                       <h5>PCOS</h5>
-                      <p>Do you have symptoms like weight gain, irregular periods, acne, excessive hair growth or thinning, and difficulty conceiving? Then you have PCOS. Around 8 to 13% of women are suffering from PCOS.</p>
+                      <p>Do you have symptoms like weight gain, irregular periods, acne, excessive hair growth or thinning, and difficulty conceiving? Then you have PCOS. Around 8 to 13% of women are suffering from PCOS</p>
                       <h6>How Can We Help You?</h6>
                       <ul>
-                        <li>We at Dr Batra's® Homeopathy offers personalised treatments to help women regain their health and confidence</li>
+                        <li>We at Dr Batra's<sup>®</sup> Homeopathy offer personalised treatments to help women regain their health and confidence</li>
                         <li>Our treatments for PCOS are safe, personalised, and side-effect-free</li>
                       </ul>
                     </div>
@@ -235,7 +235,7 @@
                     <div class="col-md-4"> <img src="images/model-tab-img-06.webp" alt="Child Health Model" class="img-fluid mx-auto" width="344" height="382" loading="lazy" /> </div>
                     <div class="col-md-8 pl-md-0">
                       <h5>Child Health: Learning Disorders in Children </h5>
-                      <p>Is your child facing difficulty in focusing, changes in sleep patterns, decline in academic performance, and frequent mood swings In UK around 349,000 children are already facing learning difficulties. These challenges impact academic and social growth.</p>
+                      <p>Is your child facing difficulty in focusing, changes in sleep patterns, decline in academic performance, and frequent mood swings. In UK around 349,000 children are already facing learning difficulties. These challenges impact academic and social growth</p>
                       <h6>How Can We Help You?</h6>
                       <ul>
                         <li>Dr Batra's® Homeopathy provides personalised treatments to enhance focus, performance, and emotional well-being</li>
