--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Dr Batra’s®</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/style.css"> </head>
 
 <body>
@@ -44,69 +45,64 @@
       </div>
     </div>
   </section>
-  <section class="form_section_div PCOS_div_new">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xl-9 col-lg-11 col-md-12 mx-auto">
-          <div class="form_custom_bg_testmonilas">
-            <div class="col-md-12">
-              <h2 class="form_custom_heading_testmonilas text-center mb-3">Consult a<br class="d-block d-md-none"> <span>Doctor</span> Online! </h2> </div>
-            <div class="col-md-12">
-              <form action="">
-                <div class="row">
-                  <!-- First Input Field -->
-                  <div class="col-lg-4 col-md-6 testmonilas_form_custom">
-                    <div class="form-group pb-0">
-                      <input id="yourname" name="yourname" class="form-control">
-                      <label for="yourname">Enter Your Name</label>
+
+   <div class="bg-band band-area px-0 form_section_div">
+      <div class="container-fluid contactFormHolder">
+        <div class="row contactForm">
+          <div class="col-xl-9 mx-auto">
+            <div class="form-top-new">
+              <div class="row form_custom_bg_testmonilas">
+                <div class="col-md-12">
+                  <h2 class="form_custom_heading_testmonilas text-center mb-2">Consult a<br class="d-block d-md-none"> <span>Doctor</span> Online! </h2></div>
+                <div class="col-md-12">
+                  <form action="">
+                    <div class="row ptmd-1 testmonilas_form_custom">
+                      <div class="form_colum_custom">
+                        <div class="form-group">
+                          <label class="custom_lable_cls">Full Name*</label>
+                          <input id="yourname" name="yourname" class="form-control" placeholder="Full Name">
+                        </div>
+                      </div>
+                      <div class="form_colum_custom">
+                        <div class="form-group">
+                          <label class="custom_lable_cls">Email ID</label>
+                          <input id="yourname" name="yourname" class="form-control" placeholder="Email ID">
+                        </div>
+                      </div>
+                      <div class="form_colum_custom">
+                        <div class="form-group">
+                          <label class="custom_lable_cls">Mobile Number*</label>
+                          <input id="yourname" name="yourname" class="form-control" placeholder="+XX (XXX) XXX XXXX">
+                        </div>
+                      </div>
+                      <div class="col-md-12">
+                        <div class="checkbox check_box_lable mt-2">
+                          <label>
+                            <input type="checkbox" checked> I understand and accept the<a href="https://www.drbatras.com/privacy-policy"> terms and conditions </a></label>
+                        </div>
+                      </div>
+                       <div class="col-md-12">
+                        <div class="checkbox check_box_lable">
+                          <label>
+                            <input type="checkbox" checked> By submitting the above details you agree to receive a Call or WhatsApp from our team for an appointment or marketing purpose*.</label>
+                        </div>
+                      </div>
+                      <div class="btn_div_outside text-center mx-auto"><a class="btn btn-block btn_custom_testmonilas" href="javascript:void(0)" rel="noreferrer" target="_blank">Book Online Consultation</a></div>
                     </div>
-                  </div>
-                  <!-- Second Input Field -->
-                  <div class="col-lg-4 col-md-6 testmonilas_form_custom">
-                    <div class="form-group pb-0">
-                      <input id="yourname2" name="yourname" class="form-control">
-                      <label for="yourname2">Enter Your Email ID</label>
-                    </div>
-                  </div>
-                  <!-- Select Field -->
-                  <div class="col-lg-1 col-md-1 col-4 testmonilas_form_custom pr-0">
-                    <div class="form-group pb-0">
-                      <select class="form-select" id="healthConcern" aria-label="Select Health Concern">
-                        <option value="+44" selected="selected">+44</option>
-                        <option value="+64">+64</option>
-                        <option value="+66">+66</option>
-                      </select>
-                      <!-- <label for="healthConcern">Select Health Concern</label> -->
-                    </div>
-                  </div>
-                  <!-- Third Input Field -->
-                  <div class="col-lg-3 col-md-3 col-8 testmonilas_form_custom mob_border_css pl-0">
-                    <div class="form-group pb-0">
-                      <input id="yourname3" name="yourname" class="form-control">
-                      <label for="yourname3">Enter Your Mobile No</label>
-                    </div>
-                  </div>
-                  <!-- Checkbox -->
-                  <div class="col-md-12">
-                    <div class="checkbox check_box_lable">
-                      <label>
-                        <input type="checkbox" checked> I understand and accept the <a href="">&nbsp; terms and conditions</a> </label>
-                    </div>
-                    <div class="checkbox check_box_lable">
-                      <label>
-                        <input type="checkbox" checked> By submitting the above details you agree to receive a Call or WhatsApp from our team for an appointment or marketing purpose*. </label>
-                    </div>
-                  </div>
-                  <!-- Submit Button -->
-                  <div class="col-md-4 mx-auto pt-md-3 pt-2"> <a class="btn btn-block btn_custom_testmonilas" href="javascript:void(0)" rel="noreferrer" target="_blank">Book Online Consultation</a> </div>
+                  </form>
                 </div>
-              </form>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+
+
+
+ 
+
+
   <section class="before_after_slider alopecia_div_new">
     <div class="container">
       <div class="row">
@@ -251,6 +247,9 @@
       </div>
     </div>
   </section>
+
+
+
   <section class="before_after_slider alopecia_div_new">
     <div class="container">
       <div class="row">
@@ -267,10 +266,10 @@
                       <h5>Dr. Lakshmi Engineer</h5>
                     <hr class="hr-line-doctor">
                     <ul>
-                      <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong><br class="d-block d-md-none"> MD (HOM) B.H.M.S(Bom)</li>
+                      <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong><br class="d-block d-md-none"> MD (HOM) B.H.M.S(Mum)</li>
                       <li><img src="images/total-exp.webp" alt="Total Experience" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Total Experience :&nbsp;</strong><br class="d-block d-md-none"> 30 Years</li>
                     </ul>
-                    <p>Dr Lakshmi Engineer is a senior registered homeopathic consultant with over 30 years of work experience, holding a master's degree in MD (HMM) and a bachelor's degree in BHMS from an internationally renowned institute. She was an associate professor for 10+ years and taught Materia Medica. Dr Lakshmi's areas of expertise include acne, alopecia, allergic disorders, psoriasis, vitiligo, and women's and children's health. Her patient roster includes more than a thousand patients who have been treated successfully and are satisfied with her professional care. Currently serving as a chief medical consultant at Dr Batra's<sup>®</sup> super speciality clinic, she has been with the clinic since 2005. Her unique clinical and academic experience enables her to take a holistic approach to patient care and achieve optimal results.</p>
+                    <p>Dr. Lakshmi Engineer is a senior registered homeopathic consultant with over 30 years of work experience, holding a master's degree in MD (HMM) and a bachelor's degree in BHMS from an internationally renowned institute. She was an associate professor for 10+ years and taught Materia Medica. Dr. Lakshmi's areas of expertise include acne, alopecia, allergic disorders, psoriasis, vitiligo, and women's and children's health. Her patient roster includes more than a thousand patients who have been treated successfully and are satisfied with her professional care. Currently serving as a chief medical consultant at Dr Batra's<sup>®</sup> super speciality clinic, she has been with the clinic since 2005. Her unique clinical and academic experience enables her to take a holistic approach to patient care and achieve optimal results.</p>
                    </div>
                   </div>
                 </div>
@@ -283,10 +282,10 @@
                           <h5>Dr. Deepti Subhash</h5>
                         <hr class="hr-line-doctor">
                         <ul>
-                          <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong><br class="d-block d-md-none"> Hair, Skin, Stress Management</li>
+                          <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong><br class="d-block d-md-none"> B.H.M.S</li>
                           <li><img src="images/total-exp.webp" alt="Total Experience" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Total Experience :&nbsp;</strong><br class="d-block d-md-none"> 15 Years</li>
                         </ul>
-                        <p>Dr Deepti Subhash has 15 years of experience in homeopathic medicine and has completed her certification course in child health and skin diseases. She has treated many patients with hair, skin, and stress with homeopathy.</p>
+                        <p>Dr. Deepti is a seasoned homeopathic practitioner with over 15 years of experience in the field. She holds a Bachelor's degree in Homeopathy, along with a specialized diploma in Child Health Management and Skin Care. Throughout her career, Dr. Deepti has developed expertise in treating a wide range of chronic skin conditions such as psoriasis, vitiligo, and atopic dermatitis. In addition, she is skilled in addressing mental health issues, hair problems, and female-related disorders.<br><br> She has been a valued member of the Dr Batra's<sup>®</sup> Homeopathic Clinic since 2011, where she has consistently delivered effective care and healing to numerous patients, enhancing their quality of life through holistic homeopathic treatments.</p>
                     </div>
                   </div>
                 </div>
@@ -297,6 +296,19 @@
       </div>
     </div>
   </section>
+
+  <section class="form_submission_devider">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-9">
+            <h2>Consult a Doctor Online!</h2></div>
+          <div class="col-lg-3">
+            <button class="Custom_devider_btn btn-block" onclick="openForm()">Enquiry Now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
   <section class="why_db_section">
     <div class="container">
       <div class="row">
@@ -819,19 +831,39 @@
       </div>
     </div>
   </footer>
+
+    <section class="col-12 text-center" style="position:fixed;z-index:8;bottom:0">
+    <div class="row d-flex align-items-center">
+      <div class="col p-0 d-block d-md-none">
+        <button class="open-button" onclick="openForm()">Enquiry Now</button>
+      </div>
+      <div class="col p-0 d-none d-md-block">
+        <button class="open-button" onclick="openForm()" id="open-button">Enquiry Now</button>
+      </div>
+        <div class="col p-0 d-block d-sm-none"><a class="d-block open-btn-cls-new" href="tel:08080466502">Call Now</a></div>
+    </div>
+  </section>
+  <div class="chat-popup" id="myForm">
+    <div class="form-container">
+      <button type="button" class="btn cancel" onclick="closeForm()"><img src="images/cancel.webp" alt="cancel" class="img-fluid" width="40" height="40" loading="lazy"></button>
+      <div class="myForm-top-form"></div>
+    </div>
+  </div>
+
+
+
   <!--   <section class="d-md-none d-block">
     <div style="height:45px">&nbsp;</div>
   </section><a href="tel:523290132" class="text-uppercase call-btn text-center d-block d-md-none">Call Now</a> -->
+
+
   <script src="js/jquery.min.js" data-cfasync="false"></script>
   <script src="js/bootstrap.bundle.min.js" data-cfasync="false"></script>
   <script src="js/owl.carousel.min.js" data-cfasync="false"></script>
+  <script src="js/jquery.magnific-popup.js"></script>
   <script src="js/custom.js" data-cfasync="false"></script>
-  <script>
 
-  </script>
-  <script>
 
-  </script>
 </body>
 
 </html>
