--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                       <div class="form_colum_custom">
                         <div class="form-group">
                           <label class="custom_lable_cls">Mobile Number*</label>
-                          <input id="yourname" name="yourname" class="form-control" placeholder="+XX (XXX) XXX XXXX">
+                          <input id="yourname" name="yourname" class="form-control" placeholder="+44 XXX XXX XXXX">
                         </div>
                       </div>
                       <div class="col-md-12">
@@ -87,7 +87,7 @@
                             <input type="checkbox" checked> By submitting the above details you agree to receive a Call or WhatsApp from our team for an appointment or marketing purpose*.</label>
                         </div>
                       </div>
-                      <div class="btn_div_outside text-center mx-auto"><a class="btn btn-block btn_custom_testmonilas" href="javascript:void(0)" rel="noreferrer" target="_blank">Book Online Consultation</a></div>
+                      <div class="btn_div_outside text-center mx-auto"><a class="btn btn-block btn_custom_testmonilas" href="javascript:void(0)" rel="noreferrer" target="_blank">Book Free Consultation Online</a></div>
                     </div>
                   </form>
                 </div>
@@ -248,6 +248,17 @@
     </div>
   </section>
 
+  <section class="form_submission_devider">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-9">
+            <h2>Consult a Doctor Online!</h2></div>
+          <div class="col-lg-3">
+            <button class="Custom_devider_btn btn-block" onclick="openForm()">Book Free Consultation Online</button>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
   <section class="before_after_slider alopecia_div_new">
@@ -285,7 +296,7 @@
                           <li><img src="images/Qualification.webp" alt="Qualification" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Qualification :&nbsp;</strong><br class="d-block d-md-none"> B.H.M.S</li>
                           <li><img src="images/total-exp.webp" alt="Total Experience" class="img-fluid" width="40" height="40" loading="lazy" /><strong>Total Experience :&nbsp;</strong><br class="d-block d-md-none"> 15 Years</li>
                         </ul>
-                        <p>Dr. Deepti is a seasoned homeopathic practitioner with over 15 years of experience in the field. She holds a Bachelor's degree in Homeopathy, along with a specialized diploma in Child Health Management and Skin Care. Throughout her career, Dr. Deepti has developed expertise in treating a wide range of chronic skin conditions such as psoriasis, vitiligo, and atopic dermatitis. In addition, she is skilled in addressing mental health issues, hair problems, and female-related disorders.<br><br> She has been a valued member of the Dr Batra's<sup>®</sup> Homeopathic Clinic since 2011, where she has consistently delivered effective care and healing to numerous patients, enhancing their quality of life through holistic homeopathic treatments.</p>
+                        <p>Dr. Deepti is a seasoned homeopathic practitioner with over 15 years of experience in the field. She holds a Bachelor's degree in Homeopathy, along with a specialized diploma in Child Health Management and Skin Care. Throughout her career, Dr. Deepti has developed expertise in treating a wide range of chronic skin conditions such as psoriasis, vitiligo, and atopic dermatitis. In addition, she is skilled in addressing mental health issues, hair problems, and female-related disorders.<br> She has been a valued member of the Dr Batra's<sup>®</sup> Homeopathic Clinic since 2011, where she has consistently delivered effective care and healing to numerous patients, enhancing their quality of life through holistic homeopathic treatments. <br>In all this remarkable years she had contributed interesting cure cases in various ailments.</p>
                     </div>
                   </div>
                 </div>
@@ -297,17 +308,7 @@
     </div>
   </section>
 
-  <section class="form_submission_devider">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-9">
-            <h2>Consult a Doctor Online!</h2></div>
-          <div class="col-lg-3">
-            <button class="Custom_devider_btn btn-block" onclick="openForm()">Enquiry Now</button>
-          </div>
-        </div>
-      </div>
-    </section>
+
 
   <section class="why_db_section">
     <div class="container">
@@ -838,7 +839,7 @@
         <button class="open-button" onclick="openForm()">Enquiry Now</button>
       </div>
       <div class="col p-0 d-none d-md-block">
-        <button class="open-button" onclick="openForm()" id="open-button">Enquiry Now</button>
+        <button class="open-button" onclick="openForm()" id="open-button">Book Free Consultation Online</button>
       </div>
         <div class="col p-0 d-block d-sm-none"><a class="d-block open-btn-cls-new" href="tel:08080466502">Call Now</a></div>
     </div>
