--- a/index.html
+++ b/index.html
@@ -248,12 +248,12 @@
     </div>
   </section>
 
-  <section class="form_submission_devider">
+    <section class="form_submission_devider">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-9">
+          <div class="col-md-8">
             <h2>Consult a Doctor Online!</h2></div>
-          <div class="col-lg-3">
+          <div class="col-lg-4">
             <button class="Custom_devider_btn btn-block" onclick="openForm()">Book Free Consultation Online</button>
           </div>
         </div>
@@ -388,6 +388,17 @@
       </div>
     </div>
   </section>
+   <section class="form_submission_devider">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-8">
+            <h2>Consult a Doctor Online!</h2></div>
+          <div class="col-lg-4">
+            <button class="Custom_devider_btn btn-block" onclick="openForm()">Book Free Consultation Online</button>
+          </div>
+        </div>
+      </div>
+    </section>
   <section class="faq_sction">
     <div class="container">
       <div class="row">
